--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ML Engineering Student specializing in PyTorch, Computer Vision, and Deep Learning. Seeking AI/ML internships for 2026.">
-    <meta name="keywords" content="Machine Learning, PyTorch, Computer Vision, Deep Learning, AI Internship, Neural Networks">
-    <meta name="author" content="Your Name">
-    <meta property="og:title" content="Your Name - ML Engineering Student">
+    <meta name="keywords" content="Machine Learning, Wyatt Black, PyTorch, Computer Vision, Deep Learning, AI Internship, Neural Networks">
+    <meta name="author" content="Wyatt Black">
+    <meta property="og:title" content="Wyatt Black - ML Engineering Student">
     <meta property="og:description" content="Showcasing ML projects built with PyTorch - LSTM, CNN, and Neural Networks from scratch">
     <meta property="og:type" content="website">
-    <title>Your Name - ML Engineering Student | AI Portfolio</title>
+    <title>Wyatt Black - ML Engineering Student | AI Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
