--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
         <div class="about-content">
             <div class="about-image">
                 <div class="profile-image">
-                    <!-- Add your image here -->
-                    <img src="your-photo.jpg" alt="Your Name" />
+                    <img src="C:\VS_CODE\black1172.github.io\images\headshot_Summer2025.jpeg" alt="Your Name" />
                 </div>
             </div>
             
