--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="about-content">
             <div class="about-image">
                 <div class="profile-image">
-                    <img src="headshot_Summer2025.jpeg" alt="Your Name" />
+                    <img src="images/headshot_Summer2025.jpeg" alt="Your Name" />
                 </div>
             </div>
             
