changed name display

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <div class="logo">&lt;/WyattBlack&gt;</div>
+            <div class="logo">&lt;Wyatt Black&gt;</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
