updated links in contact

--- a/index.html
+++ b/index.html
@@ -126,7 +126,6 @@
     <!-- About Section -->
     <section id="about" class="about">
         <h2 class="section-title">About Me</h2>
-        
         <div class="about-content">
             <div class="about-image">
                 <div class="profile-image">
@@ -175,13 +174,13 @@
         </p>
         
         <div class="contact-links">
-            <a href="https://github.com/yourusername" class="contact-link">
+            <a href="https://github.com/black1172" class="contact-link">
                 <span>⚡</span> GitHub
             </a>
-            <a href="https://linkedin.com/in/yourprofile" class="contact-link">
+            <a href="https://linkedin.com/in/wyatt-black-32719a2b7" class="contact-link">
                 <span>💼</span> LinkedIn
             </a>
-            <a href="mailto:your.email@example.com" class="contact-link">
+            <a href="mailto:black.1172@osu.edu" class="contact-link">
                 <span>📧</span> Email
             </a>
             <a href="your-resume.pdf" class="contact-link" download>
