--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <a href="mailto:black.1172@osu.edu" class="contact-link">
                 <span>📧</span> Email
             </a>
-            <a href="resume_1.pdf" class="contact-link" download>
+            <a href="files/resume_1.pdf" class="contact-link" download>
                 <span>📄</span> Resume
             </a>
         </div>
