added new project links

--- a/index.html
+++ b/index.html
@@ -52,6 +52,37 @@
         <h2 class="section-title">Featured Projects</h2>
         
         <div class="projects-grid">
+                <!-- Project 0 - RA Assistant (Top Project) -->
+                <div class="project-card">
+                    <div class="project-number">00</div>
+                    <h3 class="project-title">RA Assistant – Ohio State University (Full-Stack AI Chatbot)</h3>
+                    <div class="company-logo" style="height:32px;width:32px;background:#eee;border-radius:8px;display:inline-block;margin-bottom:8px;"></div>
+                    <p class="project-description">
+                        Developed a full-stack AI chatbot for Drackett Tower freshmen, integrating a custom Python data chunker to process and structure campus PDFs for contextual retrieval. Built a FastAPI backend with Llama 3 8B, engineered prompts and session logic for concise, context-aware answers, and deployed a web interface to improve accessibility to campus resources and events.
+                    </p>
+                    <div class="tech-stack">
+                        <span class="tech-tag">Generative AI</span>
+                        <span class="tech-tag">Transformer Models</span>
+                        <span class="tech-tag">FastAPI</span>
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Llama 3 8B</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://black1172.github.io/drackett_floor3.github.io/" class="project-link">
+                            <span>→</span> Demo
+                        </a>
+                        <a href="https://github.com/black1172/drackett_floor3.github.io" class="project-link">
+                            <span>→</span> Front &amp; Back End Repo
+                        </a>
+                        <a href="https://github.com/black1172/Data_Chunker_Python" class="project-link">
+                            <span>→</span> Data Chunker Repo
+                        </a>
+                    </div>
+                    <div style="font-size:0.95em;color:#666;margin-top:8px;">
+                        <span>Associated with The Ohio State University</span> &nbsp;|&nbsp; <span>Drackett Tower - Floor 3</span><br>
+                        <span>Aug 2025 - Aug 2025</span>
+                    </div>
+                </div>
             <!-- Project 1 - Most Impressive -->
             <div class="project-card">
                 <div class="project-number">01</div>
